[tool.poetry]
name = "last-five-surgeries "
version = "0.1.0"
description = ""
authors = ["Stanislav Vasilchenko <stanilav.vasilchenko@yandex.ru>"]
readme = "README.md"
packages = [{include = "last_five_surgeries "}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
